grammar.js
    program: ($) =>
      seq(
        optional($.hash_bang_line),
        optional_with_placeholder("statement_list", $.statement_list)
      ),

    statement_list: ($) => repeat1($.statement),

    statement: ($) =>
      choice(
        $.export_statement,
        $.import,
        $.debugger_statement,
        $.expression_statement,
        $.declaration,
        $.enclosed_body,

        $.if,
        $.switch_statement,
        $.for,
        $.while,
        $.do_statement,
        $.try,
        $.with_statement,

        $.break_statement,
        $.continue_statement,
        $.return,
        $.throw_statement,
        $.empty_statement,
        $.labeled_statement
      ),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    variable_declaration: ($) =>
      seq(
        "var",
        field("assignment_list", commaSep1(alias($.variable_declarator, $.assignment))),
        $._semicolon
      ),

    variable_declarator: ($) =>
      seq(
        field("assignment_variable", choice($.identifier, $._destructuring_pattern)),
        optional_with_placeholder("assignment_value_list_optional", $.assignment_initializer)
      ),

    empty_statement: ($) => ";",

    parenthesized_expression: ($) => seq("(", $.parenthesized_expression_inner, ")"),

    // Serenade: We extract this out since parenthesized_expression is overriden in typescript.
    _expressions: ($) => choice($.expression, $.sequence_expression),

    yield_expression: ($) =>
      prec.right(seq("yield", choice(seq("*", $.expression), optional($.expression)))),

    object: ($) =>
      prec(
        "object",
        seq(
          "{",
          optional_with_placeholder(
            "key_value_pair_list",
            commaSep(
              optional(
                choice(
                  $.key_value_pair,
                  $.spread_element,
                  $.method_definition,
                  choice($.identifier, $.reserved_identifier_)
                )
              )
            )
          ),
          "}"
        )
      ),

    object_pattern: ($) =>
      prec(
        "object",
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.pair_pattern,
                $.rest_pattern,
                $.object_assignment_pattern,
                choice($.identifier, $.reserved_identifier_)
              )
            )
          ),
          "}"
        )
      ),

    assignment_pattern: ($) => seq(field("left", $.pattern), "=", field("right", $.expression)),

    array: ($) =>
      seq(
        "[",
        optional_with_placeholder(
          "list",
          commaSep(optional(alias($.array_element, $.list_element)))
        ),
        "]"
      ),

    array_pattern: ($) =>
      seq("[", commaSep(optional(choice($.pattern, $.assignment_pattern))), "]"),

    jsx_fragment: ($) => seq("<", ">", repeat($.jsx_child), "<", "/", ">"),

    jsx_text: ($) => /[^{}<>]+/,

    nested_identifier: ($) =>
      prec(
        "member",
        seq(field("identifier", choice($.identifier, $.nested_identifier)), ".", $.identifier)
      ),

    jsx_namespace_name: ($) => seq($.jsx_identifier_, ":", $.jsx_identifier_),

    class_declaration: ($) =>
      prec(
        "declaration",
        seq(
          optional_with_placeholder("decorator_list", repeat($.decorator)),
          "class",
          field("name", $.identifier),
          optional($.class_heritage),
          field("body", $.class_body),
          optional($._automatic_semicolon)
        )
      ),

    class_heritage: ($) => seq("extends", $.expression),

    function: ($) =>
      prec(
        "literal",
        seq(
          optional_with_placeholder("modifier_list", $.async_modifier),
          "function",
          optional($.identifier),
          $._call_signature,
          field("body", $.enclosed_body)
        )
      ),

    function_declaration: ($) =>
      prec.right(
        "declaration",
        seq(
          optional_with_placeholder("modifier_list", $.async_modifier),
          "function",
          field("name", $.identifier),
          $._call_signature,
          field("body", $.enclosed_body),
          optional($._automatic_semicolon)
        )
      ),

    generator_function: ($) =>
      prec(
        "literal",
        seq(
          optional_with_placeholder("modifier_list", $.async_modifier),
          "function",
          "*",
          optional($.identifier),
          $._call_signature,
          field("body", $.enclosed_body)
        )
      ),

    generator_function_declaration: ($) =>
      prec.right(
        "declaration",
        seq(
          optional_with_placeholder("modifier_list", $.async_modifier),
          "function",
          "*",
          field("name", $.identifier),
          $._call_signature,
          field("body", $.enclosed_body),
          optional($._automatic_semicolon)
        )
      ),

    _call_signature: ($) => field("parameters", $.formal_parameters),
    call: ($) =>
      choice(
        prec(
          "call", seq(
            field("identifier", $.expression),
            field("arguments_", choice($.arguments, $.template_string))
          ), 
        ),
        prec(
          "member", 
          seq(field("identifier", $.primary_expression), "?.", field("arguments_", $.arguments)),
        )
      ),

    new_expression: ($) =>
      prec.right(
        "new",
        seq(
          "new",
          field("constructor", $.primary_expression),
          optional(prec.dynamic(1, $.arguments))
        )
      ),

    await_expression: ($) => seq("await", $.expression),

    member_expression: ($) =>
      prec(
        "member",
        seq(
          choice($.expression, $.primary_expression),
          choice(".", "?."),
          choice($.private_property_identifier, $.identifier)
        )
      ),

    subscript_expression: ($) =>
      prec.right(
        "member",
        seq(
          field("object", choice($.expression, $.primary_expression)),
          optional("?."),
          "[",
          field("index", $._expressions),
          "]"
        )
      ),

    augmented_assignment_expression: ($) =>
      prec.right(
        "assign",
        seq(
          field("left", $.augmented_assignment_lhs),
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "%=",
            "^=",
            "&=",
            "|=",
            ">>=",
            ">>>=",
            "<<=",
            "**=",
            "&&=",
            "||=",
            "??="
          ),
          field("right", $.expression)
        )
      ),

    _destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

    spread_element: ($) => seq("...", $.expression),

    ternary_expression: ($) =>
      prec.right(
        "ternary",
        seq(
          field("condition", $.expression),
          "?",
          field("consequence", $.expression),
          ":",
          field("alternative", $.expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", "binary_and"],
          ["||", "binary_or"],
          [">>", "binary_times"],
          [">>>", "binary_times"],
          ["<<", "binary_times"],
          ["&", "binary_and"],
          ["^", "binary_or"],
          ["|", "binary_or"],
          ["+", "binary_plus"],
          ["-", "binary_plus"],
          ["*", "binary_times"],
          ["/", "binary_times"],
          ["%", "binary_times"],
          ["**", "binary_exp"],
          ["<", "binary_relation"],
          ["<=", "binary_relation"],
          ["==", "binary_relation"],
          ["===", "binary_relation"],
          ["!=", "binary_relation"],
          ["!==", "binary_relation"],
          [">=", "binary_relation"],
          [">", "binary_relation"],
          ["??", "ternary"],
          ["instanceof", "binary_relation"],
          ["in", "binary_in"],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression)
            )
          )
        )
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ["!", "unary_not"],
          ["~", "unary_not"],
          ["-", "unary_not"],
          ["+", "unary_not"],
          ["typeof", "unary_void"],
          ["void", "unary_void"],
          ["delete", "unary_void"],
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq(field("operator", operator), field("argument", $.expression)))
        )
      ),

    update_expression: ($) =>
      prec.left(
        choice(
          seq(field("argument", $.expression), field("operator", choice("++", "--"))),
          seq(field("operator", choice("++", "--")), field("argument", $.expression))
        )
      ),

    sequence_expression: ($) =>
      seq(
        field("left", $.expression),
        ",",
        field("right", choice($.sequence_expression, $.expression))
      ),

    //
    // Primitives
    //

    // Here we tolerate unescaped newlines in double-quoted and
    // single-quoted string literals.
    // This is legal in typescript as jsx/tsx attribute values (as of
    // 2020), and perhaps will be valid in javascript as well in the
    // future.
    //
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(alias($.unescaped_double_string_fragment, $.string_fragment), $.escape_sequence)
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice(alias($.unescaped_single_string_fragment, $.string_fragment), $.escape_sequence)
          ),
          "'"
        )
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          choice(/[^xu0-7]/, /[0-7]{1,3}/, /x[0-9a-fA-F]{2}/, /u[0-9a-fA-F]{4}/, /u{[0-9a-fA-F]+}/)
        )
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: ($) => token(choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    template_string: ($) =>
      seq("`", repeat(choice($._template_chars, $.escape_sequence, $.template_substitution)), "`"),

    template_substitution: ($) => seq("${", $._expressions, "}"),

    regex: ($) =>
      seq(
        "/",
        field("pattern", $.regex_pattern),
        token.immediate("/"),
        optional(field("flags", $.regex_flags))
      ),

    regex_pattern: ($) =>
      token.immediate(
        prec(
          -1,
          repeat1(
            choice(
              seq(
                "[",
                repeat(
                  choice(
                    seq("\\", /./), // escaped character
                    /[^\]\n\\]/ // any character besides ']' or '\n'
                  )
                ),
                "]"
              ), // square-bracket-delimited character class
              seq("\\", /./), // escaped character
              /[^/\\\[\n]/ // any character besides '[', '\', '/', '\n'
            )
          )
        )
      ),

    regex_flags: ($) => token.immediate(/[a-z]+/),

    number: ($) => {
      const hex_literal = seq(choice("0x", "0X"), /[\da-fA-F](_?[\da-fA-F])*/);

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice("-", "+")), decimal_digits);
      const exponent_part = seq(choice("e", "E"), signed_integer);

      const binary_literal = seq(choice("0b", "0B"), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice("0o", "0O"), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        "n"
      );

      const decimal_integer_literal = choice(
        "0",
        seq(optional("0"), /[1-9]/, optional(seq(optional("_"), decimal_digits)))
      );

      const decimal_literal = choice(
        seq(decimal_integer_literal, ".", optional(decimal_digits), optional(exponent_part)),
        seq(".", decimal_digits, optional(exponent_part)),
        seq(decimal_integer_literal, exponent_part),
        seq(decimal_digits)
      );

      return token(
        choice(hex_literal, decimal_literal, binary_literal, octal_literal, bigint_literal)
      );
    },

    // 'undefined' is syntactically a regular identifier in JavaScript.
    // However, its main use is as the read-only global variable whose
    // value is [undefined], for which there's no literal representation
    // unlike 'null'. We gave it its own rule so it's easy to
    // highlight in text editors and other applications.
    identifier: ($) => {
      const alpha = /[^\x00-\x1F\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric = /[^\x00-\x1F\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    private_property_identifier: ($) => {
      const alpha = /[^\x00-\x1F\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric = /[^\x00-\x1F\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq("#", alpha, repeat(alphanumeric)));
    },

    this: ($) => "this",
    super: ($) => "super",
    true: ($) => "true",
    false: ($) => "false",
    null: ($) => "null",
    undefined: ($) => "undefined",

    //
    // Expression components
    //

    arguments: ($) =>
      seq("(", optional_with_placeholder("argument_list", commaSep(optional($.argument))), ")"),

    decorator: ($) =>
      seq(
        "@",
        field(
          "decorator_expression",
          choice(
            $.identifier,
            alias($.decorator_member_expression, $.member_expression),
            alias($.decorator_call_expression, $.call)
          )
        )
      ),

    class_body: ($) =>
      seq(
        "{",
        optional_with_placeholder("class_member_list", repeat(alias($.class_member, $.member))),
        "}"
      ),

    field_definition: ($) =>
      seq(
        optional_with_placeholder("decorator_list", repeat($.decorator)),
        optional_with_placeholder("modifier_list", $.static_modifier),
        field("assignment_list", alias($.field_assignment, $.assignment))
      ),

    formal_parameters: ($) =>
      seq(
        "(",
        optional_with_placeholder("parameter_list", seq(commaSep1($.parameter), optional(","))),
        ")"
      ),

    // This negative dynamic precedence ensures that during error recovery,
    // unfinished constructs are generally treated as literal expressions,
    // not patterns.
    rest_pattern: ($) => seq("...", choice($.identifier, $._destructuring_pattern)),

    method_definition: ($) =>
      seq(
        optional_with_placeholder("decorator_list", repeat($.decorator)),
        optional_with_placeholder(
          "modifier_list",
          seq(
            optional($.static_modifier),
            optional($.async_modifier),
            optional($.accessors_modifier)
          )
        ),
        field("name", $.property_name),
        field("parameters", $.formal_parameters),
        field("body", $.enclosed_body)
      ),

    computed_property_name: ($) => seq("[", $.expression, "]"),
